2001-11-03  Michael Hope  <michaelh@juju.net.nz>

	* examples/gb/ram_fn.c (print_counter): Made ANSI compliant.
