@@ -6,7 +6,8 @@
 #include <stdarg.h>
 #pragma bank=BASE
 
-static void _printn(unsigned u, unsigned base, char issigned, void (*emitter)(char, void *), void *pData)
+static void _printn(unsigned u, unsigned base, char issigned, 
+                    volatile void (*emitter)(char, void *), void *pData)
 {
     const char *_hex = "0123456789ABCDEF";
     if (issigned && ((int)u < 0)) {
@@ -18,7 +19,10 @@ static void _printn(unsigned u, unsigned base, char issigned, void (*emitter)(ch
     (*emitter)(_hex[u%base], pData);
 }
 
-static void _printf(const char *format, void (*emitter)(char, void *), void *pData, va_list va)
+/* PENDING: HACK: A bug in 2.96a pulls emitter into registers and then
+   destroys them.  Marking it as volatile stops this.
+*/
+static void _printf(const char *format, volatile void (*emitter)(char, void *), void *pData, va_list va)
 {
     while (*format) {
 	if (*format == '%') {
@@ -97,4 +101,5 @@ void sprintf(char *into, const char *format, ...) NONBANKED
     va_start(va, format);
 
     _printf(format, _sprintf_emitter, &si, va);
+    _sprintf_emitter('\0', &si);
 }
